--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ main {
     width: 100%;
     height: 100%;
     z-index: 0;
-    /* Coloca no fundo */
 }
 
 /**-------------------------------------*/
@@ -57,7 +56,7 @@ main {
     -webkit-user-select: none;
     -moz-user-select: none;
 
-    & h1 {
+    h1 {
         font-size: 48px;
         font-weight: bold;
         width: 400px;
@@ -67,7 +66,7 @@ main {
         }
     }
 
-    & p {
+    p {
         color: var(--secondary-text-color);
         font-size: 16px;
         width: 300px;
@@ -80,11 +79,11 @@ main {
         gap: 20px;
         width: 300px;
 
-        & a {
+        a {
             text-decoration: none;
         }
 
-        & button {
+        button {
             height: 50px;
             padding: 10px;
             border: none;
@@ -104,7 +103,7 @@ main {
                 background-color: #666666;
             }
 
-            & svg {
+            svg {
                 width: 30px;
             }
         }
@@ -121,7 +120,7 @@ main {
     gap: 100px;
 
 
-    & #about-box {
+    #about-box {
         display: flex;
         gap: 80px;
         align-items: center;
@@ -132,25 +131,24 @@ main {
             max-width: 600px;
             text-align: justify;
 
-            & h2 {
+            h2 {
                 font-size: 36px;
                 color: white;
             }
 
-            & p {
-                margin-top: 20px;
+            p {
                 color: var(--secondary-text-color);
                 line-height: 1.6;
             }
 
-            & hr {
+            hr {
                 margin: 10px 0px 10px 0px;
                 height: 2px;
                 background-color: var(--secondary-text-color);
             }
         }
 
-        & img {
+        img {
             background-color: var(--primary-color);
             max-width: 300px;
             min-width: 200px;
@@ -159,25 +157,25 @@ main {
         }
     }
 
-    & #skills-box {
+    #skills-box {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 20px;
 
-        & h2 {
+        h2 {
             font-size: 36px;
             color: white;
         }
 
-        & ul {
+        ul {
             list-style: none;
             display: flex;
             gap: 15px;
             animation: carrosel 40s linear infinite;
 
-            & li {
+            li {
                 background-color: var(--background-color);
                 width: 150px;
                 padding: 10px;
@@ -208,7 +206,7 @@ main {
     flex-direction: column;
     gap: 40px;
 
-    & h2 {
+    h2 {
         font-size: 36px;
         color: white;
         text-align: center;
@@ -221,7 +219,7 @@ main {
         align-items: center;
         flex-wrap: wrap;
 
-        & a {
+        a {
             width: 300px;
             height: 200px;
             border-radius: 5px;
@@ -235,7 +233,7 @@ main {
                 transform: scale(1.05);
             }
 
-            & iframe {
+            iframe {
                 width: 1000px;
                 /* tamanho original do conteúdo */
                 height: 667px;
@@ -253,14 +251,14 @@ main {
         }
     }
 
-    & #pages {
+    #pages {
         text-align: center;
         margin-top: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
 
-        & button {
+        button {
             background-color: var(--background-color);
             border: none;
             color: var(--primary-color);
@@ -276,7 +274,7 @@ main {
                 color: white;
             }
         }
-        & #page-numbers button.active {
+        #page-numbers button.active {
                 background-color: #666666;
                 color: white;
             }
@@ -294,22 +292,22 @@ main {
     align-items: center;
     justify-content: center;
 
-    & h2 {
+    h2 {
         font-size: 36px;
         color: white;
     }
 
-    & p {
+    p {
         color: var(--secondary-text-color);
     }
 
-    & #contact-form{
+    #contact-form{
         display: flex;
         flex-direction: column;
         gap: 15px;
         width: 300px;
 
-        & input, & textarea {
+        input, textarea {
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -319,7 +317,7 @@ main {
             resize: vertical;
         }
 
-        & button {
+        button {
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -334,7 +332,7 @@ main {
                 background-color: #0d5880;
             }
 
-            & a{
+            a{
                 text-decoration: none;
                 color: white;
                 border: none;
@@ -344,7 +342,7 @@ main {
         }
     }
 
-    & #social-links {
+    #social-links {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -352,10 +350,10 @@ main {
         width: 300px;
         height: 40px;
 
-        & a {
+        a {
             transition: color 0.3s;
 
-            & img {
+            img {
                 width: 40px;
                 height: 40px;
             }
@@ -367,7 +365,7 @@ main {
     }
 }
 
-/*----------------Media---------------------*/
+/*?----------------Media---------------------*/
 
 @media (max-width: 768px) {
     #main-section h1{
@@ -382,5 +380,26 @@ main {
     #contact-section #contact-form{
         width: 100%;
     }
+}
+
+
+
+/*? animação*/
+
+[data-anima]{
+    opacity: 0;
+    transition: 0.3s;
+}
+
+[data-anima="left"]{
+    transform: translate(-50px);
+}
+[data-anima="right"]{
+    transform: translate(50px);
+}
+
+.animar{
+    transform: translate(0);
+    opacity: 1;
 }
 
