--- a/style.css
+++ b/style.css
@@ -328,6 +328,8 @@ main {
         button {
             padding: 10px;
             border: none;
+            width: 100%;
+            height: 45px;
             border-radius: 5px;
             background-color: var(--primary-color);
             color: white;
@@ -335,10 +337,36 @@ main {
             font-weight: bold;
             cursor: pointer;
             transition: background-color 0.3s;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
 
             &:hover {
                 background-color: #0d5880;
+
+                #air-plane {
+                    right: calc(50% - 15px);
+                }
+
+                span {
+                    transform: translate(240%);
+                }
             }
+
+            #air-plane {
+                width: 30px;
+                position: absolute;
+                right: 100%;
+                transition: 0.3s;
+            }
+
+            span {
+                position: absolute;
+                transition: 0.3s;
+            }
+
         }
     }
 
