--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
     color: white;
     width: 100%;
     height: 100vh;
-    max-width: 1400px;
 }
 
 main {
@@ -30,6 +29,12 @@ main {
     position: relative;
     z-index: 1;
 }
+
+*::selection {
+    background: #414141;
+    color: white;
+}
+
 
 #particles-container {
     position: absolute;
@@ -207,6 +212,8 @@ main {
     padding: 50px;
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 40px;
 
@@ -223,6 +230,7 @@ main {
         align-items: center;
         flex-wrap: wrap;
         user-select: none;
+        max-width: 1100px;
 
         a {
             width: 300px;
@@ -351,7 +359,7 @@ main {
                 }
 
                 span {
-                    transform: translate(240%);
+                    transform: translate(440%);
                 }
             }
 
@@ -411,10 +419,9 @@ main {
     }
 
     #contact-section #contact-form {
-        width: 100%;
+        width: 90%;
     }
 }
-
 
 
 /*? animação*/
