--- a/style.css
+++ b/style.css
@@ -1,425 +1,407 @@
 * {
-    font-family: "poppins", Helvetica, sans-serif;
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+   font-family: "poppins", Helvetica, sans-serif;
+   box-sizing: border-box;
+   margin: 0px;
+   padding: 0px;
 }
 
 :root {
-    --primary-color: #106aa7;
-    --background-color: #181818;
-    --secondary-background-color: #222222;
-    --primary-text-color: #ffffff;
-    --secondary-text-color: #a1a1a1;
+   --primary-color: #106aa7;
+   --background-color: #181818;
+   --secondary-background-color: #222222;
+   --primary-text-color: #ffffff;
+   --secondary-text-color: #a1a1a1;
 }
 
 body {
-    background-color: var(--background-color);
-    color: white;
-    width: 100%;
-    height: 100vh;
+   background-color: var(--background-color);
+   color: var(--primary-text-color);
+   width: 100%;
+   height: 100vh;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   overflow: hidden;
+   position: relative;
+   z-index: 1;
+
+   h2 {
+      font-size: 36px;
+   }
+
+   section {
+      padding: 50px;
+   }
 }
 
 *::selection {
-    background: #414141;
-    color: white;
+   background: #414141;
+   color: var(--primary-text-color);
 }
 
 
 #particles-container {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   left: 0;
+   z-index: 0;
 }
 
 /**-------------------------------------*/
 
 #main-section {
-    text-align: center;
-    width: 100%;
-    height: 100dvh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+   text-align: center;
+   width: 100%;
+   height: 100dvh;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 20px;
 
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
+   user-select: none;
+   -webkit-user-select: none;
+   -moz-user-select: none;
 
-    h1 {
-        font-size: 48px;
-        font-weight: bold;
-        width: 400px;
+   h1 {
+      font-size: 48px;
+      font-weight: bold;
+      width: 400px;
 
-        span {
-            color: var(--primary-color);
-        }
-    }
+      span {
+         color: var(--primary-color);
+      }
+   }
 
-    p {
-        color: var(--secondary-text-color);
-        font-size: 16px;
-        width: 300px;
-    }
+   p {
+      color: var(--secondary-text-color);
+      font-size: 16px;
+      width: 300px;
+   }
 
-    #btn-box {
-        display: flex;
-        place-content: center;
-        gap: 20px;
-        width: 300px;
+   #btn-box {
+      display: flex;
+      place-content: center;
+      gap: 20px;
+      width: 300px;
 
-        a {
-            text-decoration: none;
-            height: 50px;
-            padding: 10px;
-            border-radius: 5px;
-            background-color: #444444;
-            color: white;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-            transition: background-color 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+      a {
+         text-decoration: none;
+         height: 50px;
+         padding: 10px;
+         border-radius: 5px;
+         background-color: #444444;
+         color: white;
+         cursor: pointer;
+         font-size: 16px;
+         font-weight: bold;
+         transition: background-color 0.3s;
+         display: flex;
+         align-items: center;
+         justify-content: center;
 
-            &:hover {
-                background-color: #666666;
-            }
+         &:hover {
+            background-color: #666666;
+         }
 
-            #github-icon {
-                width: 30px;
-            }
-        }
+         #github-icon {
+            width: 30px;
+         }
+      }
 
-    }
+   }
 }
 
 /**-------------------------------------*/
 #about-section {
-    padding: 50px;
-    background-color: var(--secondary-background-color);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
+   background-color: var(--secondary-background-color);
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   gap: 100px;
 
 
-    #about-box {
-        display: flex;
-        gap: 80px;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
+   #about-box {
+      display: flex;
+      gap: 80px;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
 
-        #about-content {
-            max-width: 700px;
-            text-align: justify;
+      #about-content {
+         max-width: 700px;
+         text-align: justify;
 
-            h2 {
-                font-size: 36px;
-                color: white;
+         hr {
+            margin: 10px 0px 10px 0px;
+            height: 2px;
+            background-color: var(--secondary-text-color);
+         }
+
+         p {
+            color: var(--secondary-text-color);
+            line-height: 1.6;
+         }
+
+      }
+
+      #img-profile {
+         max-width: 300px;
+         min-width: 200px;
+         border-radius: 10px;
+         box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.5);
+      }
+
+   }
+
+   #skills-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+
+      ul {
+         list-style: none;
+         display: flex;
+         gap: 15px;
+         animation: carrosel 40s linear infinite;
+         align-self: flex-start;
+
+         /*? Skills */
+         li {
+            background-color: var(--background-color);
+            width: 150px;
+            padding: 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            text-align: center;
+            transition: 0.1s;
+
+            &:hover {
+               background-color: var(--this-bg-color);
+               color: var(--this-text-color);
             }
+         }
+      }
 
-            hr {
-                margin: 10px 0px 10px 0px;
-                height: 2px;
-                background-color: var(--secondary-text-color);
-            }
-
-            p {
-                color: var(--secondary-text-color);
-                line-height: 1.6;
-            }
-
-        }
-
-        #img-profile {
-            max-width: 300px;
-            min-width: 200px;
-            border-radius: 10px;
-            box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.5);
-        }
-
-    }
-
-    #skills-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-
-        h2 {
-            font-size: 36px;
-            color: white;
-        }
-
-        ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-            animation: carrosel 35s linear infinite;
-            align-self: flex-start;
-
-            /*? Skills */
-            li {
-                background-color: var(--background-color);
-                width: 150px;
-                padding: 10px;
-                border-radius: 5px;
-                font-weight: bold;
-                text-align: center;
-                transition: 0.1s;
-
-                &:hover {
-                    background-color: var(--this-bg-color);
-                    color: var(--this-text-color);
-                }
-            }
-        }
-
-    }
+   }
 }
 
 @keyframes carrosel {
-    from {
-        transform: translateX(0px);
-    }
+   from {
+      transform: translateX(0px);
+   }
 
-    to {
-        transform: translateX(-50%);
-        /* -1485.5px */
-    }
+   to {
+      transform: translateX(-50%);
+      /* -1485.5px */
+   }
 }
 
 /**-------------------------------------*/
 #projects-section {
-    padding: 50px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 40px;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   gap: 40px;
 
-    h2 {
-        font-size: 36px;
-        color: white;
-        text-align: center;
-    }
+   #projects-box {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      user-select: none;
+      max-width: 1100px;
 
-    #projects-box {
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        user-select: none;
-        max-width: 1100px;
+      a {
+         width: 300px;
+         height: 200px;
+         border-radius: 5px;
+         overflow: hidden;
+         box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+         transition: transform 0.3s;
+         display: inline-block;
+         position: relative;
 
-        a {
-            width: 300px;
-            height: 200px;
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s;
-            display: inline-block;
-            position: relative;
-
-            &:hover {
-                transform: scale(1.05);
-            }
+         &:hover {
+            transform: scale(1.05);
+         }
 
 
-            iframe {
-                width: 1000px;
-                /* tamanho original do conteúdo */
-                height: 667px;
-                /* proporção 3:2 ou 16:9 */
-                border: none;
-                pointer-events: none;
-                transform: scale(0.3);
-                /* reduz proporcionalmente */
-                transform-origin: top left;
-                /* mantém o canto superior visível */
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-        }
-    }
-
-    #pages {
-        text-align: center;
-
-        display: flex;
-        place-content: center;
-        user-select: none;
-
-        button {
-            background-color: var(--background-color);
+         iframe {
+            width: 1000px;
+            /* tamanho original do conteúdo */
+            height: 667px;
+            /* proporção 3:2 ou 16:9 */
             border: none;
-            color: var(--primary-color);
-            font-weight: bold;
-            padding: 10px 15px;
-            margin: 0px 5px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
+            pointer-events: none;
+            transform: scale(0.3);
+            /* reduz proporcionalmente */
+            transform-origin: top left;
+            /* mantém o canto superior visível */
+            position: absolute;
+            top: 0;
+            left: 0;
+         }
+      }
+   }
 
-            &:hover {
-                background-color: #666666;
-                color: white;
-            }
-        }
+   #pages {
+      text-align: center;
 
-        #page-numbers button.active {
+      display: flex;
+      place-content: center;
+      user-select: none;
+
+      button {
+         background-color: var(--background-color);
+         border: none;
+         color: var(--primary-color);
+         font-weight: bold;
+         padding: 10px 15px;
+         margin: 0px 5px;
+         border-radius: 5px;
+         cursor: pointer;
+         transition: background-color 0.3s;
+
+         &:hover {
             background-color: #666666;
             color: white;
-        }
-    }
+         }
+      }
+
+      #page-numbers button.active {
+         background-color: #666666;
+         color: white;
+      }
+   }
 }
 
 /**-------------------------------------*/
 #contact-section {
-    padding: 50px;
-    background-color: var(--secondary-background-color);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
+   background-color: var(--secondary-background-color);
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   align-items: center;
+   justify-content: center;
 
-    h2 {
-        font-size: 36px;
-        color: white;
-    }
+   p {
+      color: var(--secondary-text-color);
+   }
 
-    p {
-        color: var(--secondary-text-color);
-    }
+   #contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 300px;
 
-    #contact-form {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        width: 300px;
+      input,
+      textarea {
+         padding: 10px;
+         border: none;
+         border-radius: 5px;
+         background-color: var(--background-color);
+         color: white;
+         font-size: 16px;
+         resize: vertical;
+      }
 
-        input,
-        textarea {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: var(--background-color);
-            color: white;
-            font-size: 16px;
-            resize: vertical;
-        }
+      button {
+         padding: 10px;
+         border: none;
+         width: 100%;
+         height: 45px;
+         border-radius: 5px;
+         background-color: var(--primary-color);
+         color: white;
+         font-size: 16px;
+         font-weight: bold;
+         cursor: pointer;
+         transition: background-color 0.3s;
+         position: relative;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         overflow: hidden;
 
-        button {
-            padding: 10px;
-            border: none;
-            width: 100%;
-            height: 45px;
-            border-radius: 5px;
-            background-color: var(--primary-color);
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-
-            &:hover {
-                background-color: #0d5880;
-
-                #air-plane {
-                    right: calc(50% - 15px);
-                }
-
-                span {
-                    transform: translate(440%);
-                }
-            }
+         &:hover {
+            background-color: #0d5880;
 
             #air-plane {
-                width: 30px;
-                position: absolute;
-                right: 100%;
-                transition: 0.3s;
+               right: calc(50% - 15px);
             }
 
             span {
-                position: absolute;
-                transition: 0.3s;
+               transform: translate(440%);
             }
+         }
 
-        }
-    }
+         #air-plane {
+            width: 30px;
+            position: absolute;
+            right: 100%;
+            transition: 0.3s;
+         }
 
-    #social-links {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        width: 300px;
-        height: 40px;
+         span {
+            position: absolute;
+            transition: 0.3s;
+         }
 
-        a {
-            transition: color 0.3s;
+      }
+   }
 
-            img {
-                width: 40px;
-                height: 40px;
-            }
+   #social-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      width: 300px;
+      height: 40px;
 
-            &:hover {
-                scale: 1.2;
-            }
-        }
-    }
+      a {
+         transition: 0.1s;
+
+         img {
+            width: 50px;
+            height: 50px;
+         }
+
+         &:hover {
+            scale: 1.2;
+         }
+      }
+   }
 }
-
-
 
 /*?----------------Media---------------------*/
 
 @media (max-width: 768px) {
-    #main-section h1 {
-        font-size: 30px;
-    }
+   #main-section h1 {
+      font-size: 30px;
+   }
 
-    h2 {
-        font-size: 28px;
-    }
+   h2 {
+      font-size: 28px;
+   }
 
-    p {
-        font-size: 14px;
-    }
+   p {
+      font-size: 14px;
+   }
 
-    #contact-section #contact-form {
-        width: 90%;
-    }
+   #contact-section #contact-form {
+      width: 90%;
+   }
 }
